--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <div class="row">
         <button class="tab">PLAY<span></span></button>
         <button>LOCKER<span></span></button>
+        <button>ITEM SHOP<span></span></button>
         <button>BATTLE PASS<span></span></button>
-        <button>SHOP<span></span></button>
         <button>QUESTS<span></span></button>
-        <button>V-BUCKS<span></span></button>
+        <button>
+            <img src="/img/letter-v.png" alt="Imagem 1,850">
+            1,850
+            <span></span>
+        </button>
+        
       </div>
       
       <div class="play-cont">
