--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <button>LOCKER<span></span></button>
         <button>ITEM SHOP<span></span></button>
         <button>BATTLE PASS<span></span></button>
-        <button>QUESTS<span></span></button>
+        <button>
+            <img src="/img/snowflake.png" alt="Imagem QUESTS">
+            QUESTS
+            <span class="notification-dot"></span>
+        </button>
         <button>
             <img src="/img/letter-v.png" alt="Imagem 1,850">
             1,850
